Added code to work with MySQL database
passwords.config is not part of the solution, need to email it to
developers they need to update it to work with their db parameters
(server name, users, database etc...)

--- a/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
+++ b/Svetosavlje/Services/Svetosavlje.Services/Svetosavlje.Services.csproj
@@ -41,13 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlogProvider.cs" />
     <Compile Include="DatabaseProvider.cs" />
     <Compile Include="DummyDataProvider.cs" />
-    <Compile Include="Interfaces\IDataProvider.cs" />
     <Compile Include="MySQLProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Data_Layer\Svetosavlje.Data_Layer\Svetosavlje.Data_Layer.csproj">
       <Project>{D45DC115-0724-415C-86FB-825BFA06D571}</Project>
