--- a/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
+++ b/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
@@ -31,8 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,14 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlogServices\MissionNewsList.cs" />
+    <Compile Include="BlogServices\EditorNewsList.cs" />
+    <Compile Include="BlogServices\NewsList.cs" />
+    <Compile Include="Core\blogConnection.cs" />
+    <Compile Include="Core\dbConnection.cs" />
+    <Compile Include="Interfaces\IBlogProvider.cs" />
+    <Compile Include="Interfaces\IDataProvider.cs" />
     <Compile Include="MailListTopicInfo.cs" />
     <Compile Include="PitanjeInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="MySQLServices\CitanjaList.cs" />
+    <Compile Include="MySQLServices\FastingType.cs" />
+    <Compile Include="MySQLServices\Quote.cs" />
+    <Compile Include="MySQLServices\QuestionsList.cs" />
+    <Compile Include="MySQLServices\TopicsList.cs" />
+    <Compile Include="MySQLServices\ZitijasList.cs" />
     <Compile Include="WPBlogModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
