--- a/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
+++ b/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
@@ -132,6 +132,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\bootstrap.css" />
+    <Content Include="Content\bootstrap.min.js" />
+    <Content Include="Content\images\Pastir\o_dusan2.jpg" />
+    <Content Include="Content\images\Pastir\o_Ivan2.jpg" />
+    <Content Include="Content\images\Pastir\o_ljubo2.jpg" />
+    <Content Include="Content\images\Pastir\o_rade2.jpg" />
+    <Content Include="Content\images\Pastir\o_srboljub2.jpg" />
+    <Content Include="Content\responsive.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -218,7 +226,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Pastir\images\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -234,9 +241,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Molitve.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Home\Pastir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Pojanje.cshtml" />
@@ -274,6 +278,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Pastir\OtacIvan.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_PastirQuestions.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
