--- a/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
+++ b/Svetosavlje/Data_Layer/Svetosavlje.Data_Layer/Svetosavlje.Data_Layer.csproj
@@ -31,7 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
+    <Reference Include="MySql.Data, Version=6.6.5.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -52,16 +54,15 @@
     <Compile Include="Interfaces\IBlogProvider.cs" />
     <Compile Include="Interfaces\IDataProvider.cs" />
     <Compile Include="MailListTopicInfo.cs" />
-    <Compile Include="MySQLServices\PastirQuestion.cs" />
-    <Compile Include="MySQLServices\PastirTopicsList.cs" />
     <Compile Include="PitanjeInfo.cs" />
+    <Compile Include="Prolog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MySQLServices\CitanjaList.cs" />
     <Compile Include="MySQLServices\FastingType.cs" />
     <Compile Include="MySQLServices\Quote.cs" />
-    <Compile Include="MySQLServices\QuestionsList.cs" />
+    <Compile Include="MySQLServices\PitanjePastiruService.cs" />
     <Compile Include="MySQLServices\TopicsList.cs" />
-    <Compile Include="MySQLServices\ZitijasList.cs" />
+    <Compile Include="MySQLServices\PrologService.cs" />
     <Compile Include="WPBlogModel.cs" />
   </ItemGroup>
   <ItemGroup />
