Riznice.gif file added in Solution file

--- a/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
+++ b/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
@@ -194,6 +194,7 @@
     <Content Include="Content\images\Pastir\o_ljubo2.jpg" />
     <Content Include="Content\images\Pastir\o_rade2.jpg" />
     <Content Include="Content\images\Pastir\o_srboljub2.jpg" />
+    <Content Include="Content\images\Riznice\riznice.gif" />
     <Content Include="Content\responsive.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
