--- a/Svetosavlje/Web/Svetosavlje/Web.config
+++ b/Svetosavlje/Web/Svetosavlje/Web.config
@@ -15,6 +15,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ListaArhiva_TopicsPerPage" value="33"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
