forgot to add 1 image

--- a/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
+++ b/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
@@ -428,6 +428,7 @@
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Polaganje u grob detalj.gif" />
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Polaganje u grob.gif" />
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Pranje nogu detalj 2.gif" />
+    <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Pranje nogu detalj.gif" />
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Pranje nogu.gif" />
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Preobrazenje detalj 1.gif" />
     <Content Include="Content\images\Riznice\Freske\Protat\Thumbnails\Praznici\Preobrazenje detalj 2.gif" />
