--- a/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
+++ b/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
@@ -412,6 +412,7 @@
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\Sv Teodor Tiron detalj.JPG" />
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\Sv Teodor Tiron.jpg" />
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\Sv Teoktist.jpg" />
+    <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\Sv. Georgije _ Protat 1290.g.jpg" />
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\Sv. Maksim.jpg" />
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\SvGeorgije detalj.jpg" />
     <Content Include="Content\images\Riznice\Freske\Protat\Images\Svetitelji\SvPavle.jpg" />
