Dodan Crkvenoslovenski jezik

--- a/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
+++ b/Svetosavlje/Web/Svetosavlje/Svetosavlje.csproj
@@ -198,6 +198,30 @@
     <Content Include="Content\images\Biblioteka\vdobro.jpg" />
     <Content Include="Content\images\Biblioteka\vpsaltir.gif" />
     <Content Include="Content\images\Biblioteka\zicki.jpg" />
+    <Content Include="Content\images\Crkvenoslovenski\01.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\02.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\03.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\04.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\05.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\06.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\070.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\071.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\08.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\09.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\10.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\11.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\12.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\13.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\14.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\15.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\16.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\170.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\171.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\18.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\jelisaveta.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\oktoih.gif" />
+    <Content Include="Content\images\Crkvenoslovenski\slovenski.jpg" />
+    <Content Include="Content\images\Crkvenoslovenski\vbukvar.jpg" />
     <Content Include="Content\images\Pastir\o_dusan.jpg" />
     <Content Include="Content\images\Pastir\o_dusan2.jpg" />
     <Content Include="Content\images\Pastir\o_ivan.jpg" />
@@ -208,6 +232,7 @@
     <Content Include="Content\images\Pastir\o_rade2.jpg" />
     <Content Include="Content\images\Pastir\o_srboljub.jpg" />
     <Content Include="Content\images\Pastir\o_srboljub2.jpg" />
+    <Content Include="Content\images\print.gif" />
     <Content Include="Content\images\Riznice\doc\icxc.gif" />
     <Content Include="Content\images\Riznice\doc\InokGrigorije.jpg" />
     <Content Include="Content\images\Riznice\doc\Leonid.gif" />
@@ -1471,6 +1496,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\NewFolder1\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -1659,6 +1685,55 @@
     <Content Include="Content\images\Riznice\Krasnopis\Zastavice7\Zastavice 7.zip" />
     <Content Include="Content\images\Riznice\Krasnopis\Zastavice8\Zastavice 8.zip" />
     <Content Include="Content\images\Riznice\Krasnopis\Zastavice9\Zastavice 9.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\akatistbogorodici.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\CrkveniJezik.doc" />
+    <Content Include="Content\docs\Crkvenoslovenski\CrkveniJezik.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\gramatika.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\jutrenje.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\kanonbogorodici.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\kanonhristu.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\kanonvaskrsnji.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\Katavasije.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\moleban01.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\pripevikanona.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\Slovo.ttf" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari01.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari02.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari03.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari04.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari05.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari06.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\tropari07.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\vecernja.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\akatistbogorodici.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\gramatika.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\jutrenje.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\kanonbogorodici.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\kanonhristu.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\kanonvaskrsnji.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\Katavasije.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\moleban01.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\pripevikanona.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\Recnik_CSL_A4.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\Recnik_CSL_Letter.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_jutrenje.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_kanonbogorodici.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_kanonhristu.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_kanonvaskrsnji.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_Katavasije.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_moleban01.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_tropari.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\s_vecernja.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari01.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari02.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari03.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari04.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\tropari05.zip" />
+    <Content Include="Content\pdfs\Crkvenoslovenski\vecernja.zip" />
+    <Content Include="Content\docs\Crkvenoslovenski\CrkvenePesme.doc" />
+    <Content Include="Content\docs\Crkvenoslovenski\pesme.zip" />
     <None Include="Properties\PublishProfiles\Svetosavlje net4.pubxml" />
     <Content Include="Views\Riznice\Bordure.cshtml" />
     <Content Include="Views\Riznice\Bordure2.cshtml" />
@@ -1679,6 +1754,27 @@
     <Content Include="Views\Riznice\Zastavice8.cshtml" />
     <Content Include="Views\Riznice\Zastavice9.cshtml" />
     <Content Include="Views\Prolog\SearchResults.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\crkvenijezik.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Blank.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma01.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma02.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma03.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma04.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma05.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma06.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma07.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma08.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma09.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma10.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma11.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma12.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma13.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma14.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma15.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma16.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma17.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\Pesma18.cshtml" />
+    <Content Include="Views\Crkvenoslovenski\_PesmeNavigacija.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
